[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/resources/Coiny-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/lobby/keyboard_popup.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.301961, 0.301961, 0.301961, 1 )

[sub_resource type="DynamicFont" id=5]
size = 48
extra_spacing_top = 1
extra_spacing_bottom = 16
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 42
extra_spacing_top = 1
extra_spacing_bottom = 16
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 36
extra_spacing_bottom = 12
font_data = ExtResource( 1 )

[node name="Keyboard" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.3808
margin_right = -1.3808
color = Color( 0, 0, 0, 0.352941 )

[node name="Panel" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -348.5
margin_top = -58.0
margin_right = 348.5
margin_bottom = 230.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="GridContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -338.0
margin_bottom = -10.0
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B0" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B1" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B2" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B3" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B4" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B5" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 340.0
margin_right = 404.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B6" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 408.0
margin_right = 472.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B7" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 476.0
margin_right = 540.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B8" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 544.0
margin_right = 608.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B9" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 612.0
margin_right = 676.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B10" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B11" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 68.0
margin_top = 68.0
margin_right = 132.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B12" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 136.0
margin_top = 68.0
margin_right = 200.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B13" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 204.0
margin_top = 68.0
margin_right = 268.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B14" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 272.0
margin_top = 68.0
margin_right = 336.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B15" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 340.0
margin_top = 68.0
margin_right = 404.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B16" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 408.0
margin_top = 68.0
margin_right = 472.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B17" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 476.0
margin_top = 68.0
margin_right = 540.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B18" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 544.0
margin_top = 68.0
margin_right = 608.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B19" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 612.0
margin_top = 68.0
margin_right = 676.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B20" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_top = 136.0
margin_right = 64.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B21" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 68.0
margin_top = 136.0
margin_right = 132.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B22" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 136.0
margin_top = 136.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B23" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 204.0
margin_top = 136.0
margin_right = 268.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B24" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 272.0
margin_top = 136.0
margin_right = 336.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B25" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 340.0
margin_top = 136.0
margin_right = 404.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B26" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 408.0
margin_top = 136.0
margin_right = 472.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B27" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 476.0
margin_top = 136.0
margin_right = 540.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B28" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 544.0
margin_top = 136.0
margin_right = 608.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B29" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 612.0
margin_top = 136.0
margin_right = 676.0
margin_bottom = 200.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Spacing" type="Control" parent="Panel/Buttons"]
margin_top = 204.0
margin_right = 64.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )

[node name="Spacing2" type="Control" parent="Panel/Buttons"]
margin_left = 68.0
margin_top = 204.0
margin_right = 132.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )

[node name="B30" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 136.0
margin_top = 204.0
margin_right = 200.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B31" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 204.0
margin_top = 204.0
margin_right = 268.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B32" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 272.0
margin_top = 204.0
margin_right = 336.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B33" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 340.0
margin_top = 204.0
margin_right = 404.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B34" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 408.0
margin_top = 204.0
margin_right = 472.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="B35" type="Button" parent="Panel/Buttons" groups=[
"keyboard_button",
]]
margin_left = 476.0
margin_top = 204.0
margin_right = 540.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Spacing3" type="Control" parent="Panel/Buttons"]
margin_left = 544.0
margin_top = 204.0
margin_right = 608.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )

[node name="Spacing4" type="Control" parent="Panel/Buttons"]
margin_left = 612.0
margin_top = 204.0
margin_right = 676.0
margin_bottom = 268.0
rect_min_size = Vector2( 64, 64 )

[node name="EnterButton" type="Button" parent="Panel"]
margin_left = 554.0
margin_top = 214.0
margin_right = 686.0
margin_bottom = 278.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearButton" type="Button" parent="Panel"]
margin_left = 10.0
margin_top = 214.0
margin_right = 142.0
margin_bottom = 278.0
rect_min_size = Vector2( 64, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPanel" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.5
margin_top = -115.0
margin_right = 130.5
margin_bottom = -75.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -15.0
margin_right = 96.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 7 )
text = "Hello"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/EnterButton" to="." method="_on_EnterButton_pressed"]
[connection signal="pressed" from="Panel/ClearButton" to="." method="_on_ClearButton_pressed"]
